<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_bg"
    tools:context="com.qnally.shappapp.RegistrationPersonalInfo">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:paddingTop="@dimen/close_btn_padding"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/close"></android.support.v7.widget.Toolbar>

    <ImageView
        android:id="@+id/circlelogo"
        android:layout_width="152dp"
        android:layout_height="36dp"
        android:layout_marginBottom="26dp"
        android:layout_marginEnd="104dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/circle_group"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="313dp"
        android:layout_height="48dp"
        android:layout_marginBottom="636dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/varela_round"
        android:text="@string/new_acct_header"
        android:textAlignment="center"
        android:textColor="@color/shapp_blue_text"
        android:textSize="30sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/first_name_form"
        android:layout_width="@dimen/form_txt_width"
        android:layout_height="@dimen/form_txt_height"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/first_name"
        android:cursorVisible="false"
        android:fontFamily="@font/varela_round"
        android:hint="@string/first_name_hint"
        android:imeOptions="actionNext"
        android:inputType="textCapWords"
        android:nextFocusDown="@id/last_name_form"
        android:paddingEnd="@dimen/end_padding"
        android:paddingStart="@dimen/start_padding"
        android:textAlignment="viewStart"
        android:textColor="@color/shapp_blue_text"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.065" />

    <EditText
        android:id="@+id/last_name_form"
        android:layout_width="@dimen/form_txt_width"
        android:layout_height="@dimen/form_txt_height"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/first_name"
        android:cursorVisible="false"
        android:fontFamily="@font/varela_round"
        android:hint="@string/last_name_hint"
        android:imeOptions="actionNext"
        android:inputType="textCapWords"
        android:nextFocusDown="@id/billing_address_autocomplete"
        android:paddingEnd="@dimen/end_padding"
        android:paddingStart="@dimen/start_padding"
        android:textAlignment="viewStart"
        android:textColor="@color/shapp_blue_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.171" />

    <com.seatgeek.placesautocomplete.PlacesAutocompleteTextView
        android:id="@+id/billing_address_autocomplete"
        android:layout_width="@dimen/form_txt_width"
        android:layout_height="@dimen/form_txt_height"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/first_name"
        android:hint="@string/address_hint"
        android:imeOptions="actionDone"
        android:inputType="textAutoComplete"
        android:nextFocusDown="@id/email_form"
        android:paddingEnd="@dimen/end_padding"
        android:paddingStart="@dimen/start_padding"
        android:textColor="@color/shapp_blue_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.274"
        app:pacv_googleMapsApiKey="@string/autocomplete_key"
        app:pacv_resultType="no_type" />

    <TextView
        android:id="@+id/city_form"
        android:layout_width="@dimen/form_txt_width"
        android:layout_height="@dimen/form_txt_height"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/first_name"
        android:cursorVisible="false"
        android:fontFamily="@font/varela_round"
        android:hint="@string/city_hint"
        android:inputType="text"
        android:paddingEnd="@dimen/end_padding"
        android:paddingStart="@dimen/start_padding"
        android:paddingTop="@dimen/top_padding"
        android:textAlignment="viewStart"
        android:textColor="@color/shapp_blue_text"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.379" />

    <TextView
        android:id="@+id/state_form"
        android:layout_width="@dimen/form_txt_width"
        android:layout_height="@dimen/form_txt_height"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/first_name"
        android:cursorVisible="false"
        android:fontFamily="@font/varela_round"
        android:hint="@string/state_hint"
        android:inputType="text"
        android:paddingEnd="@dimen/end_padding"
        android:paddingStart="@dimen/start_padding"
        android:paddingTop="@dimen/top_padding"
        android:textAlignment="viewStart"
        android:textColor="@color/shapp_blue_text"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.482" />

    <TextView
        android:id="@+id/zipcode_form"
        android:layout_width="@dimen/form_txt_width"
        android:layout_height="@dimen/form_txt_height"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/first_name"
        android:cursorVisible="false"
        android:fontFamily="@font/varela_round"
        android:hint="@string/zipcode_hint"
        android:inputType="number"
        android:paddingEnd="@dimen/end_padding"
        android:paddingStart="@dimen/start_padding"
        android:paddingTop="@dimen/top_padding"
        android:textAlignment="viewStart"
        android:textColor="@color/shapp_blue_text"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.586" />

    <EditText
        android:id="@+id/email_form"
        android:layout_width="@dimen/form_txt_width"
        android:layout_height="44dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/first_name"
        android:cursorVisible="false"
        android:fontFamily="@font/varela_round"
        android:hint="@string/email_hint"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:nextFocusDown="@id/phone_number_form"
        android:paddingEnd="@dimen/end_padding"
        android:paddingStart="@dimen/start_padding"
        android:textAlignment="viewStart"
        android:textColor="@color/shapp_blue_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.69" />

    <EditText
        android:id="@+id/phone_number_form"
        android:layout_width="@dimen/form_txt_width"
        android:layout_height="@dimen/form_txt_height"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/first_name"
        android:cursorVisible="false"
        android:fontFamily="@font/varela_round"
        android:hint="@string/phone_number_hint"
        android:imeOptions="actionDone"
        android:inputType="phone"
        android:paddingEnd="@dimen/end_padding"
        android:paddingStart="@dimen/start_padding"
        android:textAlignment="viewStart"
        android:textColor="@color/shapp_blue_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.792" />

    <Button
        android:id="@+id/next_btn"
        android:layout_width="@dimen/btn_width"
        android:layout_height="105dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/nextbutton"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>
